[metadata]
name = saltext.salt-ext-heist
description = Salt Extension for Heist and Heist Salt
long_description = file: README.md
long_description_content_type = text/markdown
author = Megan Wilhite
author_email = megan.wilhite@gmail.com
keywords = salt-extension
url = https://gitlab.com/saltstack/pop/heist
project_urls =
    Source=https://gitlab.com/saltstack/pop/heist
    Tracker=https://gitlab.com/saltstack/pop/heist/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  runner_dirs = saltext.salt_ext_heist.loader:get_runner_dirs

# When targetting Salt >= 3003, you can remove the 'options.entry_points' section above and
# un-comment the section below.
# [options.entry_points]
# salt.loader=
#   saltext.salt-ext-heist = saltext.salt_ext_heist

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  tests = requirements/tests.in

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
